@@ -34,6 +34,8 @@ Version 0.2
   default description.
 - the `MapAdapter` has a default for path info now.  If you use
   `bind_to_environ` you don't have to pass the path later.
+- the wsgiref subclass werkzeug uses for the dev server does not use direct
+  sys.stderr logging any more but a logger called "werkzeug".
 
 
 Version 0.1
